--- a/newstyle.css
+++ b/newstyle.css
@@ -73,6 +73,8 @@ input[type="submit"]:hover{
         margin: 0px;
         position: fixed;
         top: 0;
+        border-radius: 0px;
+        box-shadow: none;
         left: 0;
         height: 100%;
         overflow-y: auto;
