--- a/res.css
+++ b/res.css
@@ -3,18 +3,12 @@
     display: block;
     clear: both;
 }
-.row{
-    padding: 10px;
-}
-/* For mobile screens */
 
 [class*="col-"]{
     width: 100%;
     float: left;
-    padding: 10px;
+    padding: 20px;
 }
-
-/* for tablets and mobile phones with larger displays */
 @media screen and (min-width: 600px){
     .col-m-1{width: 8.33%;}
     .col-m-2{width: 16.66%;}
@@ -29,9 +23,8 @@
     .col-m-11{width: 91.66%;}
     .col-m-12{width: 100%;}
 }
-
-/* for the desktop screens or similar size screens */
-@media screen and (min-width: 600px){
+/* Media queries for bigger screens like desktop */
+@media screen and (min-width: 780px){
     .col-1{width: 8.33%;}
     .col-2{width: 16.66%;}
     .col-3{width: 25%;}
@@ -45,3 +38,4 @@
     .col-11{width: 91.66%;}
     .col-12{width: 100%;}
 }
+/* Media queries tablets */
