--- a/res.css
+++ b/res.css
@@ -1,41 +1,2 @@
-.row::after{
-    content: "";
-    display: block;
-    clear: both;
-}
-
-[class*="col-"]{
-    width: 100%;
-    float: left;
-    padding: 20px;
-}
-@media screen and (min-width: 600px){
-    .col-m-1{width: 8.33%;}
-    .col-m-2{width: 16.66%;}
-    .col-m-3{width: 25%;}
-    .col-m-4{width: 33.33%;}
-    .col-m-5{width: 41.66%;}
-    .col-m-6{width: 50%;}
-    .col-m-7{width: 58.33%;}
-    .col-m-8{width: 66.66%;}
-    .col-m-9{width: 75%;}
-    .col-m-10{width: 83.33%;}
-    .col-m-11{width: 91.66%;}
-    .col-m-12{width: 100%;}
-}
-/* Media queries for bigger screens like desktop */
-@media screen and (min-width: 780px){
-    .col-1{width: 8.33%;}
-    .col-2{width: 16.66%;}
-    .col-3{width: 25%;}
-    .col-4{width: 33.33%;}
-    .col-5{width: 41.66%;}
-    .col-6{width: 50%;}
-    .col-7{width: 58.33%;}
-    .col-8{width: 66.66%;}
-    .col-9{width: 75%;}
-    .col-10{width: 83.33%;}
-    .col-11{width: 91.66%;}
-    .col-12{width: 100%;}
-}
-/* Media queries tablets */
+/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2018/03/23 16:47:26 */
+[class~=row]::after{content:"";}[class*="col-"]{padding-left:11.25pt;}[class*="col-"]{padding-bottom:11.25pt;}[class*="col-"]{padding-right:11.25pt;}[class*="col-"]{padding-top:11.25pt;}[class*="col-"]{width:100%;}[class~=row]::after{display:block;}[class~=row]::after{clear:both;}[class*="col-"]{float:left;}*{box-sizing:border-box;}@media screen and (min-width: 600px){[class~=col-m-1]{width:8.33%;}[class~=col-m-2]{width:16.66%;}[class~=col-m-3]{width:25%;}[class~=col-m-4]{width:33.33%;}[class~=col-m-5]{width:41.66%;}[class~=col-m-6]{width:50%;}.col-m-7{width:58.33%;}[class~=col-m-8]{width:66.66%;}[class~=col-m-9]{width:75%;}[class~=col-m-10]{width:83.33%;}.col-m-11{width:91.66%;}[class~=col-m-12]{width:100%;}}@media screen and (min-width: 780px){[class~=col-1]{width:8.33%;}[class~=col-2]{width:16.66%;}[class~=col-3]{width:25%;}[class~=col-4]{width:33.33%;}[class~=col-5]{width:41.66%;}.col-6{width:50%;}[class~=col-7]{width:58.33%;}[class~=col-8]{width:66.66%;}.col-9{width:75%;}[class~=col-10]{width:83.33%;}[class~=col-11]{width:91.66%;}[class~=col-12]{width:100%;}}
