--- a/style.css
+++ b/style.css
@@ -1,318 +1,108 @@
 *{
     box-sizing: border-box;
 }
-body,html{
-    margin: 0;
-    padding: 0;
-    width: 100%;
+html, body{
     height: 100%;
-    font-family: 'Open sans', sans-serif;
 }
-header{
-    position: relative;
-    height: 100%;
-    width: 100%;
-    background: url(header.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-header::after{
-    content: "";
-    display: block;
-    clear: both;
-}
-.padding-100{
-    padding: 0px 100px;
-}
-.main{
-    padding: 50px 0px;
-}
-.logo{
-    float: left;
-}
-.main > ul{
-    float: right;
-    margin: 0;
+body{
     padding: 0;
-    list-style-type: none;
-}
-.main > ul > li{
-    float: left;
-}
-
-.main > ul > li > a{
-    display: block;
-    padding: 15px 20px;
-    text-decoration: none;
-    color: grey;
-    transition: color .5s ease;
-}
-.main > ul > li > a.active{
-    color: black;
-}
-.main > ul > li:hover > a:not(.active){
-    color: dodgerblue;
-}
-.logo img{
-    display: block;
-    height: 50px;
-    width:auto 
-}
-#search{
-    height: 52px;
-    background: url(search.png);
-    background-size: 60%;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.heading{
-    font-size: 6em;
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    font-weight: normal;
+    margin: 0;
 }
 .container{
-    padding: 30px 150px;
-}
-.spec{
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-.spec > li {
-    padding: 5px 0px;
-}
-.spec-logo{
-    font-weight: bold;
-    letter-spacing: 3px;
-}
-.spec-logo img{
-    display: block;
-    height: 35px;
-    margin-bottom: 10px;
-}
-.im {
-    height: 250px;
-    width: 100%;
-    background: url(image.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    margin-top: 30px;
-}
-.facebook{
-    display: none;
-}
-.mob-navigation{
-    display: none;
-}
-.content{
-    display: none;
-}input[type="checkbox"]{
-        display: none;
-    }
-.categories{
-    width: 100%;
     height: 100%;
-}
-.cat-cont{
-    height: 85%;
-}
-.mo{
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-}
-.cat{
-    height: 100%;
-    cursor: pointer;
-    position: relative;
-    z-index: 0;
-    top: 0;
-    left: 0;
-    transition: all .3s ease-in-out;
-    overflow: hidden;
-}
-.textNode{
-    position: absolute;
-    top: 50%;
-    text-align: center;
-    width: 100%;
-    left: 0;
-    color: white;
-    z-index: 5;
-    font-size: 45px;
-    transform: translateY(-50%);
-    font-weight: bold;
-    transition: all .3s ease-in-out;
-}
-.overlay{
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
     background: black;
-    opacity: .5;
-    transition: all .3s ease-in-out;
+}
+.container > .row{
+    height: 100%;
+}
+.container > .row > [class*="col-"]{
+    height: 100%;
+}
+.back img{
+    width: 100%;
 }
 
-.cat:hover .overlay{
-    opacity: 0;
-}
-.cat:hover .textNode{
-    opacity: 0;
+/* Adjusting the form */
+.form-sec{
+    width: 370px;
+    height: auto;
+    background: black;
+    margin: 50px auto;
+    background: white;
+    padding: 20px;
+    font-family: 'Varela Round', sans-serif;
+    border-radius: 5px;
+    box-shadow: 0px 0px 30px yellow;
 }
 
-.cat:hover{
-    transform: scale(1.2);
+.myform{
+    margin-top: 40px;
 }
-.categories::after{
-    display: block;
-    clear: both;
-    content: "";
+.title{
+    position: relative;
 }
-footer{
-    padding: 25px 0px;
-    text-align: center;
-}
-footer > h1{
+.myform label{
     font-size: 18px;
-    color: darkgrey;
-    font-weight: normal;
-    font-family: 'Open sans',sans-serif;
+    position: absolute;
+    cursor: text;
+    z-index: 3;
+    top: 9px;
+    left: 15px;
+    transition: all .2s ease-in-out;
+}
+.myform input{
+    width: 100%;
+    font-family: 'Varela Round', sans-serif;
+    font-size: 18px;
+    padding: 8px 15px;
+    margin-bottom: 35px;
+    border: none;
+    color: grey;
+    border-bottom: 1px solid black;
+}
+.title span{
+    position: absolute;
+    display: block;
+    height: 2px;
+    width: 100%;
+    background: blue;
+    top: 100%;
+    left: 0;
+    margin-top: -36px;
+    transform: scale(0);
+    transform-origin: center;
+    transition: all .2s ease-in-out;
+}
+.myform input:focus{
+    outline: none;
 }
 
-@media screen and (max-width: 500px){
-    .mo{
-        height: 25%;
-    }
-    .cat{
-        height: 100%;
-    }
-    .textNode{
-        font-size: 30px;
-    }
+input:valid + label, input:focus + label{
+    transform: translate(-10px, -25px);
+    font-size: 15px;
+    color: black;
 }
-@media screen and (max-width: 779px){
-    .content{
-        display: block;
-    }
-    .container{
-        padding-right: 0px;
-        padding-left: 0px;
-        position: relative;
-        z-index: 1;
-    }
-    .container::after{
-        content: "";
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        background: white;
-        left: 0;
-        top: 0;
-        z-index: -1;
-        transform-origin: left;
-        transform-style: preserve-3d;
-        transform: skewY(-15deg);
-    }
-    .heading{
-        font-size: 50px;
-    }
-    nav{
-        display: none;
-    }
-    .padding-100{
-        padding: 0px;
-    }
-    .mob-navigation{
-        display: block;
-        height: 60px;
-        width: 100%;
-        padding: 10px;
-        position: relative;
-    }
-    .logo{
-        float: right;
-    }
-    .logo img{
-        height: 30px;
-    }
-    .mob-navigation::after{
-        content: "";
-        display: block;
-        clear: both;
-    }
-    .menu{
-        cursor: pointer;
-        width: 40px;
-        height: auto;
-        float: left;
-        position: absolute;
-        top: 50%;
-        transform: translate(0,-50%);
-    }
-    .logo{
-        position: absolute;
-        right: 10px;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-    
-    label{
-        display: block;
-        height: 60px;
-    }
-    .bar{
-        width: 35px;
-        height: 2px;
-        margin-bottom: 5px;
-        background: dodgerblue;
-    }
-    #two{
-        width: 30px;
-    }
-    #three{
-        width: 25px;
-    }
-    .content{
-        white-space: nowrap;
-        display: block;
-        height: 0;
-        overflow: hidden;
-        transition: height .5s linear;
-    }
-    .content > ul{
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        list-style-type: none;
-        font-size: 12px;
-        background: rgba(218,218,218,.5);
-        transition: height .3s ease-in-out;
-    }
-    .mob-nav::after{
-        content: "";
-        display: block;
-        clear: both;
-    }
-    .content > ul > li > a{
-        display: block;
-        padding: 10px 15px;
-        text-decoration: none;
-        color: black;
-    }
-    .content > ul > li > a.current{
-        background: black;
-        color: white;
-    }
-    input[type="checkbox"]:checked~div.content{
-        height: 100%;
-    }
+input:valid ~ span, input:focus ~ span{
+    transform: scale(1);
+}
+
+/* Adjsuting the buttons */
+.btn{
+    width: 100%;
+    padding: 10px 20px;
+    transition: all .3s ease-in-out;
+    border: none;
+    cursor: pointer;
+    background: rgb(24, 22, 168);
+    color: yellow;
+}
+.btn:hover{
+    background: dodgerblue;
+}
+.contact{
+    padding: 10px 0px;
+}
+.contact :not(h4){
+    font-size: 13px;
+    color: grey;
 }
